--- a/Error.html
+++ b/Error.html
@@ -6,7 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error</title>
 </head>
+<style>
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.container{
+    margin: 0 auto;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url(https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_1280.jpg);
+    filter:brightness(90%) ;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.main{
+    display: grid;
+    align-items: center;
+    justify-items: center;
+}
+h1{
+    font-family: 'Courier New', Courier, monospace;
+    color: aliceblue;
+    font-size: 5rem;
+}
+p{
+    font-family: 'Courier New', Courier, monospace;
+    color: aliceblue;
+    font-size: 2.5rem;
+}
+
+</style>
 <body>
-    <h1 style="color: rgb(0, 0, 0);padding-left: 45%;"> Error 404!!!</h1>
+    <div class="container">
+        <div class="main">
+            <h1> Error 404!!!</h1>
+            <p>Page not Found</p>
+        </div>
+    </div>
+
+
 </body>
 </html>
