--- a/Error.html
+++ b/Error.html
@@ -10,27 +10,38 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 .container{
-    margin: 0 auto;
+    position: relative;
+    min-height: 100vh;
+}
+.bg{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    position: relative;
+}
+.bg::after{
+    content:"";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: url(https://cdn.pixabay.com/photo/2017/08/30/01/05/milky-way-2695569_1280.jpg);
-    filter:brightness(90%) ;
-    background-position: center center;
-    background-repeat: no-repeat;
+    z-index: -1;
     background-size: cover;
+    background-position: center;
+    filter: brightness(50%);
 }
 .main{
     display: grid;
     align-items: center;
     justify-items: center;
+    border: 1px  white;
 }
 h1{
+    margin-top: 20%;
     font-family: 'Courier New', Courier, monospace;
     color: aliceblue;
     font-size: 5rem;
@@ -43,7 +54,7 @@ p{
 
 </style>
 <body>
-    <div class="container">
+    <div class="container bg">
         <div class="main">
             <h1> Error 404!!!</h1>
             <p>Page not Found</p>
